--- a/projects/authentication-page/src/app/app.html
+++ b/projects/authentication-page/src/app/app.html
@@ -1,6 +1,5 @@
 <main class="page-container">
   <div class="card-container">
-    <lib-register-card></lib-register-card>
-    <lib-login-card></lib-login-card>
+    <router-outlet></router-outlet>
   </div>
 </main>
