--- a/projects/my-lib/src/lib/elements/button/src/button.scss
+++ b/projects/my-lib/src/lib/elements/button/src/button.scss
@@ -22,32 +22,23 @@ button {
     border-radius: 12px;
     font-size: 1.1rem;
     font-weight: bold;
-    color: #fff;
-    background: linear-gradient(45deg, #00fff7, #ff00ff);
-    box-shadow: 0 0 20px #00fff7, 0 0 40px #ff00ff, 0 0 60px #00ffff;
+    color: white;
+    background-color: black;
+    box-shadow: black;
     transition: all 0.3s ease;
     cursor: pointer;
     text-transform: uppercase;
-
-    &:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 30px #00fff7, 0 0 60px #ff00ff, 0 0 90px #00ffff;
-    }
-
-    &:focus {
-      outline: none;
-      box-shadow: 0 0 40px #00fff7, 0 0 80px #ff00ff, 0 0 120px #00ffff;
-    }
-
-    &:active {
-      transform: scale(0.98);
-      box-shadow: 0 0 15px #00fff7, 0 0 30px #ff00ff;
-    }
   }
 
-  &.primary {
+  /*&.primary {
     color: blue;
-  }
+  }*/
   /*&.secondary {
   }*/
+}
+.back-button {
+  margin-top: 20px;
+  background-color: black;
+  border-radius: 10px;
+  color: white;
 }
