--- a/projects/my-lib/src/lib/elements/button/src/button.scss
+++ b/projects/my-lib/src/lib/elements/button/src/button.scss
@@ -1,4 +1,4 @@
-button {
+/*button {
   &[type='submit'] {
     border: solid black 1px;
     background: transparent;
@@ -15,7 +15,7 @@ button {
   }
   &[type='button'] {
   /* SCSS for magical button */
-  &.default {
+/*&.default {
     width: 100%;
     padding: 12px 20px;
     border: none;
@@ -33,8 +33,8 @@ button {
   /*&.primary {
     color: blue;
   }*/
-  /*&.secondary {
-  }*/
+/*&.secondary {
+  }*/ /*
 }
 .back-button {
   margin-top: 20px;
@@ -58,3 +58,4 @@ button {
   border-radius: 20px;
   transition: width ease 1s;
 }
+*/
