--- a/projects/my-lib/src/lib/composed/account-page/src/account-page.css
+++ b/projects/my-lib/src/lib/composed/account-page/src/account-page.css
@@ -4,3 +4,16 @@
   justify-content: center;
   align-items: center;
 }
+.header {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+}
+.banner {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding: 20px;
+}
