--- a/projects/admin-generator/src/app/components/projects/projects.component.html
+++ b/projects/admin-generator/src/app/components/projects/projects.component.html
@@ -2,50 +2,64 @@
   <div class="row mb-4">
     <div class="col"><h2 class="mb-0">Projects Management</h2></div>
     <div class="col-auto">
-      <button pButton type="button" label="Add Project" icon="pi pi-plus" class="p-button-success" (click)="showAddDialog()"></button>
+      <button
+        pButton
+        type="button"
+        label="Add Project"
+        icon="pi pi-plus"
+        class="p-button-success"
+        (click)="showAddDialog()"
+      ></button>
     </div>
   </div>
 
   <div class="row">
     <div class="col">
       <div class="card">
-        <p-table [value]="projects" [loading]="loading" styleClass="p-datatable-gridlines" [paginator]="true" [rows]="10" [rowsPerPageOptions]="[10, 25, 50]" responsiveLayout="scroll">
-          <ng-template pTemplate="header">
-            <tr>
-              <th pSortableColumn="name">Project Name <p-sortIcon field="name"></p-sortIcon></th>
-              <th pSortableColumn="created_at">Created At <p-sortIcon field="created_at"></p-sortIcon></th>
-              <th style="width: 150px">Actions</th>
-            </tr>
-          </ng-template>
-          <ng-template pTemplate="body" let-project>
-            <tr>
-              <td>{{ project.name }}</td>
-              <td>{{ project.created_at | date: 'short' }}</td>
-              <td>
-                <button pButton type="button" icon="pi pi-pencil" class="p-button-rounded p-button-text p-button-info" (click)="showEditDialog(project)" pTooltip="Edit"></button>
-                <button pButton type="button" icon="pi pi-trash" class="p-button-rounded p-button-text p-button-danger" (click)="confirmDelete(project)" pTooltip="Delete"></button>
-              </td>
-            </tr>
-          </ng-template>
-          <ng-template pTemplate="emptymessage">
-            <tr><td colspan="3" class="text-center py-4">No projects found</td></tr>
-          </ng-template>
-        </p-table>
+        <lib-table-grid [config]></lib-table-grid>
       </div>
     </div>
   </div>
 </div>
 
-<p-dialog [(visible)]="displayDialog" [header]="isEditMode ? 'Edit Project' : 'Add Project'" [modal]="true" [style]="{ width: '500px' }" [draggable]="false" [resizable]="false">
+<p-dialog
+  [(visible)]="displayDialog"
+  [header]="isEditMode ? 'Edit Project' : 'Add Project'"
+  [modal]="true"
+  [style]="{ width: '500px' }"
+  [draggable]="false"
+  [resizable]="false"
+>
   <div class="p-fluid">
     <div class="field mb-3">
       <label for="projectName">Project Name <span class="text-danger">*</span></label>
-      <input id="projectName" type="text" pInputText [(ngModel)]="project.name" placeholder="Enter project name" class="w-100" />
+      <input
+        id="projectName"
+        type="text"
+        pInputText
+        [(ngModel)]="row.project_name"
+        placeholder="Enter project name"
+        class="w-100"
+      />
     </div>
   </div>
   <ng-template pTemplate="footer">
-    <button pButton type="button" label="Cancel" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
-    <button pButton type="button" label="Save" icon="pi pi-check" (click)="saveProject()" [disabled]="!project.name.trim()"></button>
+    <button
+      pButton
+      type="button"
+      label="Cancel"
+      icon="pi pi-times"
+      class="p-button-text"
+      (click)="hideDialog()"
+    ></button>
+    <button
+      pButton
+      type="button"
+      label="Save"
+      icon="pi pi-check"
+      (click)="saveProject()"
+      [disabled]="!project.name.trim()"
+    ></button>
   </ng-template>
 </p-dialog>
 
