add form wizard to business component for testing

--- a/projects/admin-generator/src/app/components/projects/projects.component.html
+++ b/projects/admin-generator/src/app/components/projects/projects.component.html
@@ -1,4 +1,8 @@
 <lib-list-view [config]="ListViewConfig"></lib-list-view>
+
+<lib-form-wizard [fields]="dbFields" [stepperConfig]="stepConfig" (submit)="onFormSubmit($event)">
+</lib-form-wizard>
+
 <!-- <p-dialog
   [(visible)]="displayDialog"
   [header]="isEditMode ? 'Edit Project' : 'Add Project'"
