--- a/projects/my-lib/src/lib/layouts/list-view/src/list-view.html
+++ b/projects/my-lib/src/lib/layouts/list-view/src/list-view.html
@@ -47,7 +47,7 @@
             <p-button
               icon="pi pi-plus"
               label="Add New"
-              (onClick)="onAddItem.emit()"
+              (onClick)="addbtnClick.emit()"
               styleClass="p-button-success"
             ></p-button>
             } @if (config()?.exportToExcel) {
