admin generator interaction between child components

--- a/projects/admin-generator/src/app/modules/admin-page/components/admin-page-form/admin-page-form.html
+++ b/projects/admin-generator/src/app/modules/admin-page/components/admin-page-form/admin-page-form.html
@@ -1,5 +1,6 @@
 <lib-form-wizard
   [fields]="dbFields"
+  [data]="data"
   [module]="module"
   [stepperConfig]="stepConfig"
   (submit)="onFormSubmit($event)"
