--- a/projects/admin-generator/src/app/modules/admin-page/components/admin-page-listing/admin-page-listing.html
+++ b/projects/admin-generator/src/app/modules/admin-page/components/admin-page-listing/admin-page-listing.html
@@ -1,5 +1,5 @@
 <lib-list-view
   [config]="ListViewConfig"
-  (addbtnClick)="addRow.emit()"
+  (addBtnClick)="addRow.emit()"
   (editBtnClick)="editRowCallback($event)"
 ></lib-list-view>
