delete event in table admin page

--- a/projects/admin-generator/src/app/modules/admin-page/components/admin-page-form/admin-page-form.html
+++ b/projects/admin-generator/src/app/modules/admin-page/components/admin-page-form/admin-page-form.html
@@ -3,6 +3,6 @@
   [data]="data"
   [module]="module"
   [stepperConfig]="stepConfig"
-  (submit)="onFormSubmit($event)"
+  (successSubmit)="onFormSubmit($event)"
 >
 </lib-form-wizard>
