update in technical components

--- a/projects/my-first-app/src/app/features/account/account.html
+++ b/projects/my-first-app/src/app/features/account/account.html
@@ -1,2 +1,5 @@
 <nz-account-page></nz-account-page>
 <nz-birthday-card></nz-birthday-card>
+<nz-multiselect></nz-multiselect>
+<nz-date-picker></nz-date-picker> <nz-Checkbox></nz-Checkbox>
+<nz-textarea></nz-textarea>
