--- a/projects/my-first-app/src/app/features/login/login.html
+++ b/projects/my-first-app/src/app/features/login/login.html
@@ -1,3 +1,5 @@
 <nz-multiselect></nz-multiselect><br />
 <nz-date-picker></nz-date-picker> <br /><nz-Checkbox></nz-Checkbox><br />
 <nz-textarea></nz-textarea>
+<nz-account-page></nz-account-page>
+<nz-birthday-card></nz-birthday-card>
