life-cycle training on my-first-app

--- a/projects/my-first-app/src/app/features/account/account.html
+++ b/projects/my-first-app/src/app/features/account/account.html
@@ -3,3 +3,8 @@
 <nz-multiselect></nz-multiselect>
 <nz-date-picker></nz-date-picker> <nz-Checkbox></nz-Checkbox>
 <nz-textarea></nz-textarea>
+<ng-content></ng-content>
+<input #EmailInput type="text" placeholder="Enter email" />
+<button (click)="decrease()">-</button>
+<span>{{ count }}</span>
+<button (click)="increase()">+</button>
