--- a/projects/admin-generator/src/app/features/admin/components/admin-page-builder/admin-page-builder.html
+++ b/projects/admin-generator/src/app/features/admin/components/admin-page-builder/admin-page-builder.html
@@ -1,1 +1,3 @@
-<nz-form-builder></nz-form-builder>
+@if (formBuilderConfig) {
+  <nz-form-builder [config]="formBuilderConfig"></nz-form-builder>
+}
